--- a/src/Winhance.WPF/App.xaml
+++ b/src/Winhance.WPF/App.xaml
@@ -25,6 +25,7 @@
                 <ResourceDictionary Source="Features/Common/Resources/Styles/ScrollBarStyles.xaml"/>
                 <ResourceDictionary Source="Features/Common/Resources/Styles/ProgressIndicatorStyles.xaml"/>
                 <ResourceDictionary Source="Features/Common/Resources/Styles/DialogStyles.xaml"/>
+                <ResourceDictionary Source="Features/Common/Resources/Styles/ModalDialogStyles.xaml"/>
                 <ResourceDictionary Source="Features/Common/Resources/Styles/AppItemStyles.xaml"/>
                 <ResourceDictionary Source="Features/Common/Resources/Styles/RegistryTooltipTemplate.xaml"/>
                 <ResourceDictionary Source="Features/Common/Resources/Styles/CommandTooltipTemplate.xaml"/>
