Fix Minimize, Maximize, Close & MoreMenu buttons in ViewModel

--- a/src/Winhance.WPF/Features/Common/Views/MainWindow.xaml
+++ b/src/Winhance.WPF/Features/Common/Views/MainWindow.xaml
@@ -176,7 +176,7 @@
                                         <Button x:Name="CloseButton"
                                                 Style="{StaticResource WindowCloseButton}"
                                                 WindowChrome.IsHitTestVisibleInChrome="True"
-                                                Command="{Binding CloseCommand}">
+                                                Command="{Binding CloseWindowCommand}">
                                                 <materialDesign:PackIcon Kind="Close"
                                                                          Width="18"
                                                                          Height="18"/>
